(issue 97) input field enabled on email action selected in threshold editor (issue 98) location attributes ordered by weight on tracker form (issue 198) drag and drop new profile items in taxonomy edit (issue 239) long location text wraps on atlas form

--- a/src/main/css/bdrs/bdrs.css
+++ b/src/main/css/bdrs/bdrs.css
@@ -520,6 +520,10 @@ legend {
     white-space: nowrap;
 }
 
+.prewrap {
+    white-space: pre-wrap;
+}
+
 .noborder {
     border-top-width: 0px;
     border-right-width: 0px;
@@ -1967,7 +1971,7 @@ div.blockUI.blockMsg.blockPage h1 {
 }
 
 .comments .commentBody {
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 .jcollapsible {
